test/2-error/ann-Int-Str.ploy
main = <>-><> =>
  0:Str
